Fix simulator missing scrollbar issue on Edge / IE (#874)
* Show a scrollbar in the simulator view in edge

* Styling the scrollbars

* Move scrollbar css to less

--- a/theme/pxt.less
+++ b/theme/pxt.less
@@ -39,7 +39,12 @@
 }
 
 /* File list / Simulator layout */
+#simulator {
+    position: relative;
+    height: 100%;
+}
 #filelist {
+  width: 100%;
   left: 0;
   min-width: @simulatorWidth;
   max-width: @simulatorWidth;
@@ -153,6 +158,17 @@
     left:2rem;
 }
 
+/* Scrollbars */
+/* OSX Lion+ hides scrollbars while not in use, this overrides that so it's obvious when a div can be scrolled */
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+    width: 10px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: #ccc;
+    -webkit-box-shadow: 0 0 1px #ccc;
+}
 
 /*******************************
              Docs
